2005-10-16  Jan Nieuwenhuizen  <janneke@gnu.org>

	* nl/index.html: Typo.

2005-10-15  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/install/index.html: add a note about ghostscript on fedora. 

2005-10-13  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/install/stable.ihtml: move macos back to 2.6.3

2005-10-10  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/install/devel.ihtml: update macos download.

2005-10-08  John Mandereau  <john.mandereau@free.fr>

	* fr/contact.ihtml: add new mailing list lilypond-user-fr

	* fr/about/browser-language.html: add warning saying some pages
	are not translated

2005-10-06  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/install/devel.ihtml: Update autopackage, mingw.

	* site/about/faq.html:
	* site/about/features.html: Typos (Mark weber).  Remove some
	commas.

2005-09-17  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/install/devel.ihtml: Update.

2005-09-14  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/about/faq.html: update noteedit url.

2005-09-12  Gauvain Pocentek  <gauvainpocentek@yahoo.fr>

	* fr/documentation.html: new file

2005-09-07  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/install/devel.ihtml: Update autopackage.

2005-09-07  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/install/stable.ihtml: fix URL of upgrade package.

2005-09-04  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/news.ihtml (href): trim

2005-09-03  Jan Nieuwenhuizen  <janneke@gnu.org>

	* TRANSLATION (LANG): Move documentation.html to category 3,
	optional.

2005-09-03  Gauvain Pocentek  <gauvainpocentek@yahoo.fr>

	* fr/: minor corrections
	* news.ihtml: french translation announcement added

2005-09-02  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/about/automated-engraving/menu-entries.py: New file.  (John
	Mandereau)

2005-09-02  John Mandereau  <john.mandereau@free.fr>

	* site/about/automated-engraving/: fix minor navigation bugs which
	appeared on big-page.

2005-09-02  Gauvain Pocentek  <gauvainpocentek@yahoo.fr>
