@@ -1,5 +1,5 @@
 <!--
-    Translation of CVS Revision: 1.38
+    Translation of CVS Revision: 1.39
     
     Translators must leave this comment in tact, but remove any dollar
     signs ($) from the CVS Revision indicator.
@@ -94,6 +94,15 @@ t&eacute;l&eacute;chargeable
 </p>
 
 <a name="redhat-notes"></a>
+
+La mani&egrave;re la plus simple d'obtenir Ghostscript 8.x sous Fedora est
+d'ex&eacute;cuter en tant que super-utilisateur&nbsp;:
+
+<pre>
+  rpmbuild --rebuild ftp://dl.xs4all.nl/pub/mirror/fedora/development/SRPMS/ghostscript-8.15.1-1.src.rpm
+  rpm -U /usr/src/redhat/RPMS/i386/ghostscript*8.15.1* 
+</pre>
+
 <a name="mandrake-notes"></a>
 
 Tous les logos et images de produits sont les marques d&eacute;pos&eacute;es de leurs ayant-droits respectifs.
