@@ -1,3 +1,7 @@
+2005-10-16  Gauvain Pocentek  <gauvainpocentek@yahoo.fr>
+
+	* fr/install/index.html: note about ghoscript translated
+
 2005-10-16  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* nl/index.html: Typo.
